--- a/asset/style.css
+++ b/asset/style.css
@@ -103,7 +103,7 @@ body {
   margin: 1.5rem 0rem;
 }
 .socialIcons {
-  margin: 1.5rem 1rem 1rem 0rem;
+  margin: 13px 8px 5px 0px;
   padding: 6px;
   border-radius: 5px;
   transition: background-color 0.15s ease-in-out;
